# advent-of-code

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  advent.sublime-project  advent.sublime-workspace  build.fox  day1_1.py  day2.py  day2_2.py  day3.py  day3_2.py  devenv.nix  generate_fox.py  justfile  requirements.txt  setup.py
2016/: file_input.py
2016/day2/: day2.py  day2_2.py
2016/day3/: day3.py  day3_2.py
2016/day4/: day4.py  day4_2.py
2016/day5/: main.js  package.json
2017/: README.md  generate_fox.py  requirements.txt
2018/: .gitmodules
2018/cpp/: CMakeLists.txt
2018/cpp/day10/: README.md
2018/cpp/day15/: .gitignore
2018/cpp/day15/src/: main.cpp
2021/day02/: build.zig
2021/day04/: build.zig
2021/day08/: Cargo.toml
2021/day09/: Cargo.toml
2021/day13/: plot.py
2021/day14/: Cargo.toml
2021/day15/: README.md
2021/day18/: rust-toolchain.toml
2021/day19/: Cargo.toml  asd.txt
2022/day09/: Cargo.toml
2022/day11/: Cargo.toml
2022/day12/: Cargo.toml
2022/day13/: Cargo.toml
2022/day15/: Cargo.toml
2023/day01/: Makefile  main.py  part1.S  part2.S
2023/day02/: Cargo.toml  main.rs
2023/day04/: Cargo.toml
2023/day05/: Cargo.toml
2023/day08/: Cargo.toml
advent2018-rust/: Cargo.toml
cpp/: .clang-format
cpp/day13/: .clang-format  CMakeLists.txt  README.md
cpp/day13/src/: main.cpp
day01/: build.zig
day03/: build.zig
day3/: README.md  day3.cpp  day3_2.py
day4/: day4.py
day7/: README.md  day7.cpp  day7_part2.py
rust/: Cargo.toml
rust-utils/: Cargo.toml
template-rs/: cookiecutter.json
(+388 files in other folders)
